Release history for strictures

2.000001 - 2015-06-28
  - update for perl 5.22 warning categories
  - avoid using goto &UNIVERSAL::VERSION on perl 5.8, since it segfaults some
    builds
  - also detect development directories based on .bzr directory
  - various test cleanups

2.000000 - 2015-02-26
  * Incompatible Changes
    - strictures 2 fatalizes only a subset of warnings.  Some warning
      categories are not safe to catch, or just inappropriate to have fatal.
      Existing code looking like 'use strictures 1;' will continue to get the
      old behavior of fatalizing all errors.  The new behavior will take effect
      when no version or version 2 is specified.

1.005006 - 2015-01-30
  - fix extra checks triggering on paths starting with t, xt, lib, or blib,
    rather than only triggering on those directories.
  - avoid stat checks for VCS directories until we are in an appropriately
    named file
  - various cleanups in test files

1.005005 - 2014-08-16
  - include minimum perl version in metadata

1.005004 - 2014-03-06
  - make sure meta files list extra modules as recommendations, not requirements

1.005003 - 2014-02-12
  - added support for PUREPERL_ONLY (rt#91407)
  - fixed using strictures->VERSION to query the version (rt#92965)

1.005002 - 2013-12-10
  - extra prereqs will be listed as hard prerequisites if a compiler is
    available

1.005001 - 2013-11-07
  - fix skip on old perl on test script

1.005000 - 2013-11-05
  - detect mercurial when checking for development trees
  - avoid using constant.pm to save a bit of memory on older perls
  - update to v2 metadata

1.004004 - 2012-11-12
  - fix crash in 1.004003 due to qw() list being readonly

1.004003 - 2012-11-10
  - check only once for presence of extra testing prereqs
  - explicitly specify no dynamic_config in META

1.004002 - 2012-09-08
  - add better rationale for the extra testing heuristic

1.004001 - 2012-07-12
  - test-specific strictures now enabled during 'dzil test'
