@@ -7,20 +7,16 @@
 /blib/
 /pm_to_blib
 /.build
-!.gitignore
 *.bs
-/xs/*.c
 *.o
-cover_db
+/cover_db
 *.gc??
-test-mydeps-*
 nytprof*
-/inc/
-!.gitignore
 .*.sw?
-README
-Distar/
-/strictures-*
+/README
+/Distar/
+/strictures-*/
+/strictures-*.tar.gz
 
 # yes that's right, distar makes it for us
 MANIFEST.SKIP
