@@ -3,3 +3,7 @@ use lib 'Distar/lib';
 use Distar;
 
 author 'mst - Matt S. Trout (cpan:MSTROUT) <mst@shadowcat.co.uk>';
+
+manifest_include inc => '.pm';
+
+1;
